--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Provided as a template for quickly creating HTML5 games.
+# Setup
+
+### Install node
+http://nodejs.org/download/
+
+### Install coffee-script
+`sudo npm install -g coffee-script`
+
+### Install jasmine-node
+`sudo npm install - g jasmine-node`
